--- a/public/styleguide/item-layout-footer.html
+++ b/public/styleguide/item-layout-footer.html
@@ -56,23 +56,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-modules-user-account" class="kss-section kss-section--depth-2 is-fullscreen">
+    <div id="kssref-layout-footer" class="kss-section kss-section--depth-2 is-fullscreen">
 
       <div class="kss-style">
         <h2 class="kss-title kss-title--level-2">
-          <a class="kss-title__permalink" href="#kssref-modules-user-account">
+          <a class="kss-title__permalink" href="#kssref-layout-footer">
             <span class="kss-title__ref">
-              5.3
+              4.1
               <span class="kss-title__permalink-hash">
-                  #Modules.User Account
+                  #Layout.Footer
               </span>
             </span>
-            User Account
+            Footer
           </a>
         </h2>
 
           <p class="kss-toolbar">
-            <a href="#kssref-modules-user-account" data-kss-guides="true">
+            <a href="#kssref-layout-footer" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -93,7 +93,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-modules-user-account" data-kss-markup="true">
+            <a href="#kssref-layout-footer" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -103,7 +103,7 @@
           </p>
 
           <div class="kss-description">
-            <p>The User Account module</p>
+            <p>The Footer</p>
 
           </div>
 
@@ -116,38 +116,21 @@
 
 
           <div class="kss-modifier__example">
-            <div class="row">
-<div class="col-xs-12 col-sm-4 col-md-3">
-    <div class="Tile User-account">
-        <div class="Tile__heading User-account__heading">
-            <div class="User-account__profile-image">
-                <img src="http://dating.app/img/avatars/male.png" alt="">
-            </div>
-            <div class="User-account__username">
-                admin
+            <footer class="Footer">
+    <div class="container">
+        <div class="col-xs-12 col-md-4">
+            <div class="Footer__logo">
+                <img src="http://dating.app/img/site_logos/Altijdsex_LogoSmall_Pos@1x.jpg" alt="dev-Altijdsex.nl">
             </div>
         </div>
-        <div class="Tile__body User-account__body">
-            <div class="User-account__item">
-                <div class="User-account__item__icon">
-                    <i class="fa fa-user"></i>
-                </div>
-                <div class="User-account__item__text">
-                    Edit profile and picture
-                </div>
-            </div>
-            <div class="User-account__item">
-                <div class="User-account__item__icon">
-                    <i class="fa fa-money"></i>
-                </div>
-                <div class="User-account__item__text">
-                    Credits
-                </div>
-            </div>
+        <div class="col-xs-12 col-md-4">
+            asdasda
+        </div>
+        <div class="col-xs-12 col-md-4">
+            asdasd
         </div>
     </div>
-</div>
-</div>
+</footer>
             <div class="kss-modifier__example-footer"></div>
           </div>
 
@@ -155,44 +138,27 @@
 
           <details class="kss-markup kss-style">
             <summary>
-                Markup: <code>modules/user-account.hbs</code>
+                Markup: <code>footer.hbs</code>
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;row&quot;&gt;
-&lt;div class&#x3D;&quot;col-xs-12 col-sm-4 col-md-3&quot;&gt;
-    &lt;div class&#x3D;&quot;Tile User-account&quot;&gt;
-        &lt;div class&#x3D;&quot;Tile__heading User-account__heading&quot;&gt;
-            &lt;div class&#x3D;&quot;User-account__profile-image&quot;&gt;
-                &lt;img src&#x3D;&quot;http://dating.app/img/avatars/male.png&quot; alt&#x3D;&quot;&quot;&gt;
-            &lt;/div&gt;
-            &lt;div class&#x3D;&quot;User-account__username&quot;&gt;
-                admin
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;footer class&#x3D;&quot;Footer&quot;&gt;
+    &lt;div class&#x3D;&quot;container&quot;&gt;
+        &lt;div class&#x3D;&quot;col-xs-12 col-md-4&quot;&gt;
+            &lt;div class&#x3D;&quot;Footer__logo&quot;&gt;
+                &lt;img src&#x3D;&quot;http://dating.app/img/site_logos/Altijdsex_LogoSmall_Pos@1x.jpg&quot; alt&#x3D;&quot;dev-Altijdsex.nl&quot;&gt;
             &lt;/div&gt;
         &lt;/div&gt;
-        &lt;div class&#x3D;&quot;Tile__body User-account__body&quot;&gt;
-            &lt;div class&#x3D;&quot;User-account__item&quot;&gt;
-                &lt;div class&#x3D;&quot;User-account__item__icon&quot;&gt;
-                    &lt;i class&#x3D;&quot;fa fa-user&quot;&gt;&lt;/i&gt;
-                &lt;/div&gt;
-                &lt;div class&#x3D;&quot;User-account__item__text&quot;&gt;
-                    Edit profile and picture
-                &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class&#x3D;&quot;User-account__item&quot;&gt;
-                &lt;div class&#x3D;&quot;User-account__item__icon&quot;&gt;
-                    &lt;i class&#x3D;&quot;fa fa-money&quot;&gt;&lt;/i&gt;
-                &lt;/div&gt;
-                &lt;div class&#x3D;&quot;User-account__item__text&quot;&gt;
-                    Credits
-                &lt;/div&gt;
-            &lt;/div&gt;
+        &lt;div class&#x3D;&quot;col-xs-12 col-md-4&quot;&gt;
+            asdasda
+        &lt;/div&gt;
+        &lt;div class&#x3D;&quot;col-xs-12 col-md-4&quot;&gt;
+            asdasd
         &lt;/div&gt;
     &lt;/div&gt;
-&lt;/div&gt;
-&lt;/div&gt;</code></pre>
+&lt;/footer&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>modules/user-account.scss</code>, line 1
+          Source: <code>footer.scss</code>, line 1
         </div>
 
     </div>
