--- a/public/styleguide/item-modules.html
+++ b/public/styleguide/item-modules.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="kss-assets/kss.css">
-  <link rel="stylesheet" href="../css/app.css">
+  <link rel="stylesheet" href="../../css/app.css">
 
 </head>
 <body id="kss-node" class="kss-fullscreen-mode">
@@ -27,30 +27,45 @@
         </a>
       </li>
       <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-bootstrap-variables.html">
+          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Bootstrap Variables</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-brand-variables.html">
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Brand Variables</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-components.html">
-          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Components</span>
+          <span class="kss-nav__ref">3</span><span class="kss-nav__name">Components</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-layout.html">
+          <span class="kss-nav__ref">4</span><span class="kss-nav__name">Layout</span>
         </a>
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-modules.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Modules</span>
+          <span class="kss-nav__ref">5</span><span class="kss-nav__name">Modules</span>
         </a>
             <ul class="kss-nav__menu-child">
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-online-users">
-                  <span class="kss-nav__ref ">2.1</span
+                  <span class="kss-nav__ref ">5.1</span
                   ><span class="kss-nav__name">Online Users</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-shoutbox">
-                  <span class="kss-nav__ref ">2.2</span
+                  <span class="kss-nav__ref ">5.2</span
                   ><span class="kss-nav__name">Shoutbox</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-user-account">
-                  <span class="kss-nav__ref ">2.3</span
+                  <span class="kss-nav__ref ">5.3</span
                   ><span class="kss-nav__name">User Account</span>
                 </a>
               </li>
@@ -67,7 +82,7 @@
         <h1 class="kss-title kss-title--level-1">
           <a class="kss-title__permalink" href="#kssref-modules">
             <span class="kss-title__ref">
-              2
+              5
               <span class="kss-title__permalink-hash">
                   #Modules
               </span>
