--- a/public/styleguide/section-components.html
+++ b/public/styleguide/section-components.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="kss-assets/kss.css">
-  <link rel="stylesheet" href="../css/app.css">
+  <link rel="stylesheet" href="../../css/app.css">
 
 </head>
 <body id="kss-node" >
@@ -27,33 +27,54 @@
         </a>
       </li>
       <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-bootstrap-variables.html">
+          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Bootstrap Variables</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-brand-variables.html">
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Brand Variables</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-components.html">
-          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Components</span>
+          <span class="kss-nav__ref">3</span><span class="kss-nav__name">Components</span>
         </a>
             <ul class="kss-nav__menu-child">
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-components.html#kssref-components-activity">
-                  <span class="kss-nav__ref ">1.1</span
+                  <span class="kss-nav__ref ">3.1</span
                   ><span class="kss-nav__name">Activity</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-components.html#kssref-components-alert">
+                  <span class="kss-nav__ref ">3.2</span
+                  ><span class="kss-nav__name">Alert</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-components.html#kssref-components-button">
-                  <span class="kss-nav__ref ">1.2</span
+                  <span class="kss-nav__ref ">3.3</span
                   ><span class="kss-nav__name">Button</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-components.html#kssref-components-tile">
-                  <span class="kss-nav__ref ">1.3</span
+                  <span class="kss-nav__ref ">3.4</span
                   ><span class="kss-nav__name"> Tile</span>
                 </a>
               </li>
             </ul>
       </li>
       <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-layout.html">
+          <span class="kss-nav__ref">4</span><span class="kss-nav__name">Layout</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-modules.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Modules</span>
+          <span class="kss-nav__ref">5</span><span class="kss-nav__name">Modules</span>
         </a>
       </li>
     </ul>
@@ -67,7 +88,7 @@
         <h1 class="kss-title kss-title--level-1">
           <a class="kss-title__permalink" href="#kssref-components">
             <span class="kss-title__ref">
-              1
+              3
               <span class="kss-title__permalink-hash">
                   #Components
               </span>
@@ -89,7 +110,7 @@
         <h2 class="kss-title kss-title--level-2">
           <a class="kss-title__permalink" href="#kssref-components-activity">
             <span class="kss-title__ref">
-              1.1
+              3.1
               <span class="kss-title__permalink-hash">
                   #Components.Activity
               </span>
@@ -215,13 +236,172 @@
         </div>
 
     </section>
+    <section id="kssref-components-alert" class="kss-section kss-section--depth-2 ">
+
+      <div class="kss-style">
+        <h2 class="kss-title kss-title--level-2">
+          <a class="kss-title__permalink" href="#kssref-components-alert">
+            <span class="kss-title__ref">
+              3.2
+              <span class="kss-title__permalink-hash">
+                  #Components.Alert
+              </span>
+            </span>
+            Alert
+          </a>
+        </h2>
+
+          <p class="kss-toolbar">
+              <a href="#kssref-components-alert" data-kss-fullscreen="kssref-components-alert">
+                <span class="kss-toolbar__tooltip">Toggle full screen</span>
+                <svg class="off" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                  <path class="kss-toolbar__icon-fill" d="M64 0v26l-10-10-12 12-6-6 12-12-10-10zM28 42l-12 12 10 10h-26v-26l10 10 12-12z"></path>
+                </svg>
+                <svg class="on" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                  <path class="kss-toolbar__icon-fill" d="M28 36v26l-10-10-12 12-6-6 12-12-10-10zM64 6l-12 12 10 10h-26v-26l10 10 12-12z"></path>
+                </svg>
+              </a>
+              <a href="item-components-alert.html" target="_blank">
+                <span class="kss-toolbar__tooltip">Open in new window</span>
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                  <rect x="0" y="20" width="40" height="44" fill="#fff"/>
+                  <path class="kss-toolbar__icon-fill" d="M40,64l-40,0l0,-44l40,0l0,44Zm-36,-40l0,36l32,0l0,-36l-32,0Z"/>
+                  <rect class="kss-toolbar__icon-fill" x="0" y="20" width="40" height="10"/>
+                  <rect x="24" y="0" width="40" height="44" fill="#fff"/>
+                  <path class="kss-toolbar__icon-fill" d="M64,44l-40,0l0,-44l40,0l0,44Zm-36,-40l0,36l32,0l0,-36l-32,0Z"/>
+                  <rect class="kss-toolbar__icon-fill" x="24" y="0" width="40" height="10"/>
+                </svg>
+              </a>
+            <a href="#kssref-components-alert" data-kss-guides="true">
+              <span class="kss-toolbar__tooltip">Toggle example guides</span>
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
+                <rect class="kss-toolbar__icon-fill" x="54" y="21" width="5" height="9"/>
+                <rect class="kss-toolbar__icon-fill" x="54" y="35" width="5" height="9"/>
+                <rect class="kss-toolbar__icon-fill" x="5" y="21" width="5" height="9"/>
+                <rect class="kss-toolbar__icon-fill" x="5" y="0" width="5" height="15"/>
+                <rect class="kss-toolbar__icon-fill" x="35" y="5" width="9" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="20" y="5" width="9" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="0" y="5" width="15" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="54" y="0" width="5" height="15"/>
+                <rect class="kss-toolbar__icon-fill" x="49" y="5" width="15" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="54" y="49" width="5" height="15"/>
+                <rect class="kss-toolbar__icon-fill" x="49" y="54" width="15" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="5" y="49" width="5" height="15"/>
+                <rect class="kss-toolbar__icon-fill" x="0" y="54" width="15" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="35" y="54" width="9" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
+              </svg>
+            </a>
+            <a href="#kssref-components-alert" data-kss-markup="true">
+              <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
+                <path class="kss-toolbar__icon-fill" d="M26.445,17.761l-6.103,-6.103l-20.342,20.342l20.342,20.342l6.103,-6.103l-14.24,-14.239l14.24,-14.239Z"/>
+              </svg>
+            </a>
+          </p>
+
+          <div class="kss-description">
+            <p>The component use to announce any kind of feedback to the user</p>
+
+          </div>
+
+      </div>
+
+        <div class="kss-modifier__wrapper">
+          <div class="kss-modifier__heading kss-style">
+            Examples
+          </div>
+
+            <div class="kss-modifier__default-name kss-style">
+              Default styling
+            </div>
+
+          <div class="kss-modifier__example">
+            <div class="Alert  alert-dismissible" >
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>!</strong> This is a message with feedback to the user.
+</div>
+            <div class="kss-modifier__example-footer"></div>
+          </div>
+
+            <div class="kss-modifier__name kss-style">
+              .Alert--success
+            </div>
+            <div class="kss-modifier__description kss-style">
+              The success alert
+            </div>
+            <div class="kss-modifier__example">
+              <div class="Alert Alert--success alert-dismissible" >
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Alert--success!</strong> This is a message with feedback to the user.
+</div>
+              <div class="kss-modifier__example-footer"></div>
+            </div>
+            <div class="kss-modifier__name kss-style">
+              .Alert--warning
+            </div>
+            <div class="kss-modifier__description kss-style">
+              The warning alert
+            </div>
+            <div class="kss-modifier__example">
+              <div class="Alert Alert--warning alert-dismissible" >
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Alert--warning!</strong> This is a message with feedback to the user.
+</div>
+              <div class="kss-modifier__example-footer"></div>
+            </div>
+            <div class="kss-modifier__name kss-style">
+              .Alert--info
+            </div>
+            <div class="kss-modifier__description kss-style">
+              The info alert
+            </div>
+            <div class="kss-modifier__example">
+              <div class="Alert Alert--info alert-dismissible" >
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Alert--info!</strong> This is a message with feedback to the user.
+</div>
+              <div class="kss-modifier__example-footer"></div>
+            </div>
+            <div class="kss-modifier__name kss-style">
+              .Alert--danger
+            </div>
+            <div class="kss-modifier__description kss-style">
+              The error alert
+            </div>
+            <div class="kss-modifier__example">
+              <div class="Alert Alert--danger alert-dismissible" >
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Alert--danger!</strong> This is a message with feedback to the user.
+</div>
+              <div class="kss-modifier__example-footer"></div>
+            </div>
+        </div>
+
+          <details class="kss-markup kss-style">
+            <summary>
+                Markup: <code>components/alert.hbs</code>
+            </summary>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;Alert {{ modifier_class }} alert-dismissible&quot; &gt;
+    &lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;close&quot; data-dismiss&#x3D;&quot;alert&quot; aria-label&#x3D;&quot;close&quot;&gt;&amp;times;&lt;/a&gt;
+    &lt;strong&gt;{{ modifier_class }}!&lt;/strong&gt; This is a message with feedback to the user.
+&lt;/div&gt;</code></pre>
+          </details>
+
+        <div class="kss-source kss-style">
+          Source: <code>components/alert.scss</code>, line 1
+        </div>
+
+    </section>
     <section id="kssref-components-button" class="kss-section kss-section--depth-2 ">
 
       <div class="kss-style">
         <h2 class="kss-title kss-title--level-2">
           <a class="kss-title__permalink" href="#kssref-components-button">
             <span class="kss-title__ref">
-              1.2
+              3.3
               <span class="kss-title__permalink-hash">
                   #Components.Button
               </span>
@@ -382,9 +562,9 @@
             <summary>
                 Markup: <code>components/button.hbs</code>
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;Button {{modifier_class}}&quot;&gt;Link Button&lt;/a&gt;
-&lt;button class&#x3D;&quot;Button {{modifier_class}}&quot;&gt;Button Element&lt;/button&gt;
-&lt;input type&#x3D;&quot;button&quot; class&#x3D;&quot;Button {{modifier_class}}&quot; value&#x3D;&quot;input[type&#x3D;&#x27;button&#x27;]&quot;/&gt;</code></pre>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;a href&#x3D;&quot;#&quot; class&#x3D;&quot;Button {{ modifier_class }}&quot;&gt;Link Button&lt;/a&gt;
+&lt;button class&#x3D;&quot;Button {{ modifier_class }}&quot;&gt;Button Element&lt;/button&gt;
+&lt;input type&#x3D;&quot;button&quot; class&#x3D;&quot;Button {{ modifier_class}}&quot; value&#x3D;&quot;input[type&#x3D;&#x27;button&#x27;]&quot;/&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
@@ -398,7 +578,7 @@
         <h2 class="kss-title kss-title--level-2">
           <a class="kss-title__permalink" href="#kssref-components-tile">
             <span class="kss-title__ref">
-              1.3
+              3.4
               <span class="kss-title__permalink-hash">
                   #Components.Tile
               </span>
