--- a/resources/assets/styleguide/item-bootstrap-variables.html
+++ b/resources/assets/styleguide/item-bootstrap-variables.html
@@ -56,23 +56,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-modules-user-account" class="kss-section kss-section--depth-2 is-fullscreen">
+    <div id="kssref-bootstrap-variables" class="kss-section kss-section--depth-1 is-fullscreen">
 
       <div class="kss-style">
-        <h2 class="kss-title kss-title--level-2">
-          <a class="kss-title__permalink" href="#kssref-modules-user-account">
+        <h1 class="kss-title kss-title--level-1">
+          <a class="kss-title__permalink" href="#kssref-bootstrap-variables">
             <span class="kss-title__ref">
-              5.3
+              1
               <span class="kss-title__permalink-hash">
-                  #Modules.User Account
+                  #Bootstrap Variables
               </span>
             </span>
-            User Account
+            Bootstrap Variables
           </a>
-        </h2>
+        </h1>
 
           <p class="kss-toolbar">
-            <a href="#kssref-modules-user-account" data-kss-guides="true">
+            <a href="#kssref-bootstrap-variables" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -93,7 +93,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-modules-user-account" data-kss-markup="true">
+            <a href="#kssref-bootstrap-variables" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -103,7 +103,7 @@
           </p>
 
           <div class="kss-description">
-            <p>The User Account module</p>
+            <p>Bootstrap Variables</p>
 
           </div>
 
@@ -116,38 +116,44 @@
 
 
           <div class="kss-modifier__example">
-            <div class="row">
-<div class="col-xs-12 col-sm-4 col-md-3">
-    <div class="Tile User-account">
-        <div class="Tile__heading User-account__heading">
-            <div class="User-account__profile-image">
-                <img src="http://dating.app/img/avatars/male.png" alt="">
-            </div>
-            <div class="User-account__username">
-                admin
-            </div>
-        </div>
-        <div class="Tile__body User-account__body">
-            <div class="User-account__item">
-                <div class="User-account__item__icon">
-                    <i class="fa fa-user"></i>
-                </div>
-                <div class="User-account__item__text">
-                    Edit profile and picture
-                </div>
-            </div>
-            <div class="User-account__item">
-                <div class="User-account__item__icon">
-                    <i class="fa fa-money"></i>
-                </div>
-                <div class="User-account__item__text">
-                    Credits
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
+            <pre>
+//body
+$body-bg: #f5f8fa;
+
+// Borders
+$laravel-border-color: darken($body-bg, 10%);
+$list-group-border: $laravel-border-color;
+$navbar-default-border: $laravel-border-color;
+$panel-default-border: $laravel-border-color;
+$panel-inner-border: $laravel-border-color;
+
+// Brands
+$brand-primary: #3097D1;
+$brand-info: #8eb4cb;
+$brand-success: #2ab27b;
+$brand-warning: #cbb956;
+$brand-danger:  #bf5329;
+
+// Typography
+$font-family-sans-serif: "Raleway", sans-serif;
+$font-size-base: 14px;
+$line-height-base: 1.6;
+$text-color: #636b6f;
+
+// Navbar
+$navbar-default-bg: #fff;
+
+// Buttons
+$btn-default-color: $text-color;
+
+// Inputs
+$input-border: lighten($text-color, 40%);
+$input-border-focus: lighten($brand-primary, 25%);
+$input-color-placeholder: lighten($text-color, 30%);
+
+// Panels
+$panel-default-heading-bg: #fff;
+</pre>
             <div class="kss-modifier__example-footer"></div>
           </div>
 
@@ -155,44 +161,50 @@
 
           <details class="kss-markup kss-style">
             <summary>
-                Markup: <code>modules/user-account.hbs</code>
+                Markup: <code>variables.hbs</code>
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;row&quot;&gt;
-&lt;div class&#x3D;&quot;col-xs-12 col-sm-4 col-md-3&quot;&gt;
-    &lt;div class&#x3D;&quot;Tile User-account&quot;&gt;
-        &lt;div class&#x3D;&quot;Tile__heading User-account__heading&quot;&gt;
-            &lt;div class&#x3D;&quot;User-account__profile-image&quot;&gt;
-                &lt;img src&#x3D;&quot;http://dating.app/img/avatars/male.png&quot; alt&#x3D;&quot;&quot;&gt;
-            &lt;/div&gt;
-            &lt;div class&#x3D;&quot;User-account__username&quot;&gt;
-                admin
-            &lt;/div&gt;
-        &lt;/div&gt;
-        &lt;div class&#x3D;&quot;Tile__body User-account__body&quot;&gt;
-            &lt;div class&#x3D;&quot;User-account__item&quot;&gt;
-                &lt;div class&#x3D;&quot;User-account__item__icon&quot;&gt;
-                    &lt;i class&#x3D;&quot;fa fa-user&quot;&gt;&lt;/i&gt;
-                &lt;/div&gt;
-                &lt;div class&#x3D;&quot;User-account__item__text&quot;&gt;
-                    Edit profile and picture
-                &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class&#x3D;&quot;User-account__item&quot;&gt;
-                &lt;div class&#x3D;&quot;User-account__item__icon&quot;&gt;
-                    &lt;i class&#x3D;&quot;fa fa-money&quot;&gt;&lt;/i&gt;
-                &lt;/div&gt;
-                &lt;div class&#x3D;&quot;User-account__item__text&quot;&gt;
-                    Credits
-                &lt;/div&gt;
-            &lt;/div&gt;
-        &lt;/div&gt;
-    &lt;/div&gt;
-&lt;/div&gt;
-&lt;/div&gt;</code></pre>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;pre&gt;
+//body
+$body-bg: #f5f8fa;
+
+// Borders
+$laravel-border-color: darken($body-bg, 10%);
+$list-group-border: $laravel-border-color;
+$navbar-default-border: $laravel-border-color;
+$panel-default-border: $laravel-border-color;
+$panel-inner-border: $laravel-border-color;
+
+// Brands
+$brand-primary: #3097D1;
+$brand-info: #8eb4cb;
+$brand-success: #2ab27b;
+$brand-warning: #cbb956;
+$brand-danger:  #bf5329;
+
+// Typography
+$font-family-sans-serif: &quot;Raleway&quot;, sans-serif;
+$font-size-base: 14px;
+$line-height-base: 1.6;
+$text-color: #636b6f;
+
+// Navbar
+$navbar-default-bg: #fff;
+
+// Buttons
+$btn-default-color: $text-color;
+
+// Inputs
+$input-border: lighten($text-color, 40%);
+$input-border-focus: lighten($brand-primary, 25%);
+$input-color-placeholder: lighten($text-color, 30%);
+
+// Panels
+$panel-default-heading-bg: #fff;
+&lt;/pre&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>modules/user-account.scss</code>, line 1
+          Source: <code>variables.scss</code>, line 1
         </div>
 
     </div>
