--- a/resources/assets/styleguide/item-components-tile.html
+++ b/resources/assets/styleguide/item-components-tile.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="kss-assets/kss.css">
-  <link rel="stylesheet" href="../css/app.css">
+  <link rel="stylesheet" href="../../css/app.css">
 
 </head>
 <body id="kss-node" class="kss-fullscreen-mode">
@@ -27,13 +27,28 @@
         </a>
       </li>
       <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-bootstrap-variables.html">
+          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Bootstrap Variables</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-brand-variables.html">
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Brand Variables</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-components.html">
-          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Components</span>
+          <span class="kss-nav__ref">3</span><span class="kss-nav__name">Components</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-layout.html">
+          <span class="kss-nav__ref">4</span><span class="kss-nav__name">Layout</span>
         </a>
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-modules.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Modules</span>
+          <span class="kss-nav__ref">5</span><span class="kss-nav__name">Modules</span>
         </a>
       </li>
     </ul>
@@ -47,7 +62,7 @@
         <h2 class="kss-title kss-title--level-2">
           <a class="kss-title__permalink" href="#kssref-components-tile">
             <span class="kss-title__ref">
-              1.3
+              3.4
               <span class="kss-title__permalink-hash">
                   #Components.Tile
               </span>
