--- a/resources/assets/styleguide/item-components.html
+++ b/resources/assets/styleguide/item-components.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="kss-assets/kss.css">
-  <link rel="stylesheet" href="../css/app.css">
+  <link rel="stylesheet" href="../../css/app.css">
 
 </head>
 <body id="kss-node" class="kss-fullscreen-mode">
@@ -27,33 +27,54 @@
         </a>
       </li>
       <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-bootstrap-variables.html">
+          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Bootstrap Variables</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-brand-variables.html">
+          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Brand Variables</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-components.html">
-          <span class="kss-nav__ref">1</span><span class="kss-nav__name">Components</span>
+          <span class="kss-nav__ref">3</span><span class="kss-nav__name">Components</span>
         </a>
             <ul class="kss-nav__menu-child">
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-components.html#kssref-components-activity">
-                  <span class="kss-nav__ref ">1.1</span
+                  <span class="kss-nav__ref ">3.1</span
                   ><span class="kss-nav__name">Activity</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-components.html#kssref-components-alert">
+                  <span class="kss-nav__ref ">3.2</span
+                  ><span class="kss-nav__name">Alert</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-components.html#kssref-components-button">
-                  <span class="kss-nav__ref ">1.2</span
+                  <span class="kss-nav__ref ">3.3</span
                   ><span class="kss-nav__name">Button</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-components.html#kssref-components-tile">
-                  <span class="kss-nav__ref ">1.3</span
+                  <span class="kss-nav__ref ">3.4</span
                   ><span class="kss-nav__name"> Tile</span>
                 </a>
               </li>
             </ul>
       </li>
       <li class="kss-nav__menu-item">
+        <a class="kss-nav__menu-link" href="section-layout.html">
+          <span class="kss-nav__ref">4</span><span class="kss-nav__name">Layout</span>
+        </a>
+      </li>
+      <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-modules.html">
-          <span class="kss-nav__ref">2</span><span class="kss-nav__name">Modules</span>
+          <span class="kss-nav__ref">5</span><span class="kss-nav__name">Modules</span>
         </a>
       </li>
     </ul>
@@ -67,7 +88,7 @@
         <h1 class="kss-title kss-title--level-1">
           <a class="kss-title__permalink" href="#kssref-components">
             <span class="kss-title__ref">
-              1
+              3
               <span class="kss-title__permalink-hash">
                   #Components
               </span>
