--- a/resources/assets/styleguide/item-layout.html
+++ b/resources/assets/styleguide/item-layout.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="../../css/app.css">
 
 </head>
-<body id="kss-node" >
+<body id="kss-node" class="kss-fullscreen-mode">
 
 <div class="kss-sidebar kss-style">
   <header class="kss-header">
@@ -45,6 +45,20 @@
         <a class="kss-nav__menu-link" href="section-layout.html">
           <span class="kss-nav__ref">4</span><span class="kss-nav__name">Layout</span>
         </a>
+            <ul class="kss-nav__menu-child">
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-layout.html#kssref-layout-footer">
+                  <span class="kss-nav__ref ">4.1</span
+                  ><span class="kss-nav__name">Footer</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-layout.html#kssref-layout-navbar">
+                  <span class="kss-nav__ref ">4.2</span
+                  ><span class="kss-nav__name">Navbar</span>
+                </a>
+              </li>
+            </ul>
       </li>
       <li class="kss-nav__menu-item">
         <a class="kss-nav__menu-link" href="section-modules.html">
@@ -55,6 +69,29 @@
   </nav>
 </div>
 <article role="main" class="kss-main">
+
+    <div id="kssref-layout" class="kss-section kss-section--depth-1 is-fullscreen">
+
+      <div class="kss-style">
+        <h1 class="kss-title kss-title--level-1">
+          <a class="kss-title__permalink" href="#kssref-layout">
+            <span class="kss-title__ref">
+              4
+              <span class="kss-title__permalink-hash">
+                  #Layout
+              </span>
+            </span>
+            Layout
+          </a>
+        </h1>
+
+
+
+      </div>
+
+
+
+    </div>
 </article>
 
 <!-- SCRIPTS -->
