[staging] asset management + User-summary component + styleguide

--- a/resources/assets/styleguide/item-components.html
+++ b/resources/assets/styleguide/item-components.html
@@ -65,6 +65,12 @@
                   ><span class="kss-nav__name"> Tile</span>
                 </a>
               </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-components.html#kssref-components-user-summary">
+                  <span class="kss-nav__ref ">3.5</span
+                  ><span class="kss-nav__name">User Summary</span>
+                </a>
+              </li>
             </ul>
       </li>
       <li class="kss-nav__menu-item">
