[develop] search minor changes

--- a/resources/assets/styleguide/item-modules.html
+++ b/resources/assets/styleguide/item-modules.html
@@ -58,14 +58,20 @@
                 </a>
               </li>
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-shoutbox">
+                <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-search">
                   <span class="kss-nav__ref ">5.2</span
+                  ><span class="kss-nav__name">Search</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-shoutbox">
+                  <span class="kss-nav__ref ">5.3</span
                   ><span class="kss-nav__name">Shoutbox</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-user-account">
-                  <span class="kss-nav__ref ">5.3</span
+                  <span class="kss-nav__ref ">5.4</span
                   ><span class="kss-nav__name">User Account</span>
                 </a>
               </li>
