--- a/resources/assets/styleguide/item-modules-search.html
+++ b/resources/assets/styleguide/item-modules-search.html
@@ -56,23 +56,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-modules-user-account" class="kss-section kss-section--depth-2 is-fullscreen">
+    <div id="kssref-modules-search" class="kss-section kss-section--depth-2 is-fullscreen">
 
       <div class="kss-style">
         <h2 class="kss-title kss-title--level-2">
-          <a class="kss-title__permalink" href="#kssref-modules-user-account">
+          <a class="kss-title__permalink" href="#kssref-modules-search">
             <span class="kss-title__ref">
-              5.4
+              5.2
               <span class="kss-title__permalink-hash">
-                  #Modules.User Account
+                  #Modules.Search
               </span>
             </span>
-            User Account
+            Search
           </a>
         </h2>
 
           <p class="kss-toolbar">
-            <a href="#kssref-modules-user-account" data-kss-guides="true">
+            <a href="#kssref-modules-search" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -93,7 +93,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-modules-user-account" data-kss-markup="true">
+            <a href="#kssref-modules-search" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -103,7 +103,7 @@
           </p>
 
           <div class="kss-description">
-            <p>The User Account module</p>
+            <p>The Search module</p>
 
           </div>
 
@@ -118,32 +118,31 @@
           <div class="kss-modifier__example">
             <div class="row">
 <div class="col-xs-12 col-sm-4 col-md-3">
-    <div class="Tile User-account">
-        <div class="Tile__heading User-account__heading">
-            <div class="User-account__profile-image">
-                <img src="http://dating.app/img/avatars/male.png" alt="">
-            </div>
-            <div class="User-account__username">
-                admin
-            </div>
+    <div class="Tile Search">
+        <div class="Tile__heading Search__heading">
+            Search
         </div>
-        <div class="Tile__body User-account__body">
-            <div class="User-account__item">
-                <div class="User-account__item__icon">
-                    <i class="fa fa-user"></i>
+        <div class="Tile__body Search__body">
+            <form method="GET" action="">
+                <div class="form-group">
+                    <label for="">City</label>
+                    <input type="text" class="form-control" name="city">
                 </div>
-                <div class="User-account__item__text">
-                    Edit profile and picture
+                <div class="form-group">
+                    <label for="">Age</label>
+                    <select name="age" class="form-control">
+                        <option value="18-25">18-25</option>
+                        <option value="25-30">25-30</option>
+                        <option value="30-35">30-35</option>
+                        <option value="35-40">35-40</option>
+                    </select>
                 </div>
-            </div>
-            <div class="User-account__item">
-                <div class="User-account__item__icon">
-                    <i class="fa fa-money"></i>
+                <div class="text-right">
+                    <button type="submit" class="Button Button--primary">
+                        <span class="Button__content">SEARCH</span>
+                    </button>
                 </div>
-                <div class="User-account__item__text">
-                    Credits
-                </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
@@ -155,36 +154,35 @@
 
           <details class="kss-markup kss-style">
             <summary>
-                Markup: <code>modules/user-account.hbs</code>
+                Markup: <code>modules/search.hbs</code>
             </summary>
             <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;row&quot;&gt;
 &lt;div class&#x3D;&quot;col-xs-12 col-sm-4 col-md-3&quot;&gt;
-    &lt;div class&#x3D;&quot;Tile User-account&quot;&gt;
-        &lt;div class&#x3D;&quot;Tile__heading User-account__heading&quot;&gt;
-            &lt;div class&#x3D;&quot;User-account__profile-image&quot;&gt;
-                &lt;img src&#x3D;&quot;http://dating.app/img/avatars/male.png&quot; alt&#x3D;&quot;&quot;&gt;
-            &lt;/div&gt;
-            &lt;div class&#x3D;&quot;User-account__username&quot;&gt;
-                admin
-            &lt;/div&gt;
+    &lt;div class&#x3D;&quot;Tile Search&quot;&gt;
+        &lt;div class&#x3D;&quot;Tile__heading Search__heading&quot;&gt;
+            Search
         &lt;/div&gt;
-        &lt;div class&#x3D;&quot;Tile__body User-account__body&quot;&gt;
-            &lt;div class&#x3D;&quot;User-account__item&quot;&gt;
-                &lt;div class&#x3D;&quot;User-account__item__icon&quot;&gt;
-                    &lt;i class&#x3D;&quot;fa fa-user&quot;&gt;&lt;/i&gt;
+        &lt;div class&#x3D;&quot;Tile__body Search__body&quot;&gt;
+            &lt;form method&#x3D;&quot;GET&quot; action&#x3D;&quot;&quot;&gt;
+                &lt;div class&#x3D;&quot;form-group&quot;&gt;
+                    &lt;label for&#x3D;&quot;&quot;&gt;City&lt;/label&gt;
+                    &lt;input type&#x3D;&quot;text&quot; class&#x3D;&quot;form-control&quot; name&#x3D;&quot;city&quot;&gt;
                 &lt;/div&gt;
-                &lt;div class&#x3D;&quot;User-account__item__text&quot;&gt;
-                    Edit profile and picture
+                &lt;div class&#x3D;&quot;form-group&quot;&gt;
+                    &lt;label for&#x3D;&quot;&quot;&gt;Age&lt;/label&gt;
+                    &lt;select name&#x3D;&quot;age&quot; class&#x3D;&quot;form-control&quot;&gt;
+                        &lt;option value&#x3D;&quot;18-25&quot;&gt;18-25&lt;/option&gt;
+                        &lt;option value&#x3D;&quot;25-30&quot;&gt;25-30&lt;/option&gt;
+                        &lt;option value&#x3D;&quot;30-35&quot;&gt;30-35&lt;/option&gt;
+                        &lt;option value&#x3D;&quot;35-40&quot;&gt;35-40&lt;/option&gt;
+                    &lt;/select&gt;
                 &lt;/div&gt;
-            &lt;/div&gt;
-            &lt;div class&#x3D;&quot;User-account__item&quot;&gt;
-                &lt;div class&#x3D;&quot;User-account__item__icon&quot;&gt;
-                    &lt;i class&#x3D;&quot;fa fa-money&quot;&gt;&lt;/i&gt;
+                &lt;div class&#x3D;&quot;text-right&quot;&gt;
+                    &lt;button type&#x3D;&quot;submit&quot; class&#x3D;&quot;Button Button--primary&quot;&gt;
+                        &lt;span class&#x3D;&quot;Button__content&quot;&gt;SEARCH&lt;/span&gt;
+                    &lt;/button&gt;
                 &lt;/div&gt;
-                &lt;div class&#x3D;&quot;User-account__item__text&quot;&gt;
-                    Credits
-                &lt;/div&gt;
-            &lt;/div&gt;
+            &lt;/form&gt;
         &lt;/div&gt;
     &lt;/div&gt;
 &lt;/div&gt;
@@ -192,7 +190,7 @@
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>modules/user-account.scss</code>, line 1
+          Source: <code>modules/search.scss</code>, line 1
         </div>
 
     </div>
