--- a/resources/assets/styleguide/section-modules.html
+++ b/resources/assets/styleguide/section-modules.html
@@ -58,14 +58,20 @@
                 </a>
               </li>
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-shoutbox">
+                <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-search">
                   <span class="kss-nav__ref ">5.2</span
+                  ><span class="kss-nav__name">Search</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-shoutbox">
+                  <span class="kss-nav__ref ">5.3</span
                   ><span class="kss-nav__name">Shoutbox</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-modules.html#kssref-modules-user-account">
-                  <span class="kss-nav__ref ">5.3</span
+                  <span class="kss-nav__ref ">5.4</span
                   ><span class="kss-nav__name">User Account</span>
                 </a>
               </li>
@@ -340,13 +346,171 @@
         </div>
 
     </section>
+    <section id="kssref-modules-search" class="kss-section kss-section--depth-2 ">
+
+      <div class="kss-style">
+        <h2 class="kss-title kss-title--level-2">
+          <a class="kss-title__permalink" href="#kssref-modules-search">
+            <span class="kss-title__ref">
+              5.2
+              <span class="kss-title__permalink-hash">
+                  #Modules.Search
+              </span>
+            </span>
+            Search
+          </a>
+        </h2>
+
+          <p class="kss-toolbar">
+              <a href="#kssref-modules-search" data-kss-fullscreen="kssref-modules-search">
+                <span class="kss-toolbar__tooltip">Toggle full screen</span>
+                <svg class="off" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                  <path class="kss-toolbar__icon-fill" d="M64 0v26l-10-10-12 12-6-6 12-12-10-10zM28 42l-12 12 10 10h-26v-26l10 10 12-12z"></path>
+                </svg>
+                <svg class="on" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                  <path class="kss-toolbar__icon-fill" d="M28 36v26l-10-10-12 12-6-6 12-12-10-10zM64 6l-12 12 10 10h-26v-26l10 10 12-12z"></path>
+                </svg>
+              </a>
+              <a href="item-modules-search.html" target="_blank">
+                <span class="kss-toolbar__tooltip">Open in new window</span>
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                  <rect x="0" y="20" width="40" height="44" fill="#fff"/>
+                  <path class="kss-toolbar__icon-fill" d="M40,64l-40,0l0,-44l40,0l0,44Zm-36,-40l0,36l32,0l0,-36l-32,0Z"/>
+                  <rect class="kss-toolbar__icon-fill" x="0" y="20" width="40" height="10"/>
+                  <rect x="24" y="0" width="40" height="44" fill="#fff"/>
+                  <path class="kss-toolbar__icon-fill" d="M64,44l-40,0l0,-44l40,0l0,44Zm-36,-40l0,36l32,0l0,-36l-32,0Z"/>
+                  <rect class="kss-toolbar__icon-fill" x="24" y="0" width="40" height="10"/>
+                </svg>
+              </a>
+            <a href="#kssref-modules-search" data-kss-guides="true">
+              <span class="kss-toolbar__tooltip">Toggle example guides</span>
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
+                <rect class="kss-toolbar__icon-fill" x="54" y="21" width="5" height="9"/>
+                <rect class="kss-toolbar__icon-fill" x="54" y="35" width="5" height="9"/>
+                <rect class="kss-toolbar__icon-fill" x="5" y="21" width="5" height="9"/>
+                <rect class="kss-toolbar__icon-fill" x="5" y="0" width="5" height="15"/>
+                <rect class="kss-toolbar__icon-fill" x="35" y="5" width="9" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="20" y="5" width="9" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="0" y="5" width="15" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="54" y="0" width="5" height="15"/>
+                <rect class="kss-toolbar__icon-fill" x="49" y="5" width="15" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="54" y="49" width="5" height="15"/>
+                <rect class="kss-toolbar__icon-fill" x="49" y="54" width="15" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="5" y="49" width="5" height="15"/>
+                <rect class="kss-toolbar__icon-fill" x="0" y="54" width="15" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="35" y="54" width="9" height="5"/>
+                <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
+              </svg>
+            </a>
+            <a href="#kssref-modules-search" data-kss-markup="true">
+              <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
+                <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
+                <path class="kss-toolbar__icon-fill" d="M26.445,17.761l-6.103,-6.103l-20.342,20.342l20.342,20.342l6.103,-6.103l-14.24,-14.239l14.24,-14.239Z"/>
+              </svg>
+            </a>
+          </p>
+
+          <div class="kss-description">
+            <p>The Search module</p>
+
+          </div>
+
+      </div>
+
+        <div class="kss-modifier__wrapper">
+          <div class="kss-modifier__heading kss-style">
+            Example
+          </div>
+
+
+          <div class="kss-modifier__example">
+            <div class="row">
+<div class="col-xs-12 col-sm-4 col-md-3">
+    <div class="Tile Search">
+        <div class="Tile__heading Search__heading">
+            Search
+        </div>
+        <div class="Tile__body Search__body">
+            <form method="GET" action="">
+                <div class="form-group">
+                    <label for="">City</label>
+                    <input type="text" class="form-control" name="city">
+                </div>
+                <div class="form-group">
+                    <label for="">Age</label>
+                    <select name="age" class="form-control">
+                        <option value="18-25">18-25</option>
+                        <option value="25-30">25-30</option>
+                        <option value="30-35">30-35</option>
+                        <option value="35-40">35-40</option>
+                    </select>
+                </div>
+                <div class="text-right">
+                    <button type="submit" class="Button Button--primary">
+                        <span class="Button__content">SEARCH</span>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
+            <div class="kss-modifier__example-footer"></div>
+          </div>
+
+        </div>
+
+          <details class="kss-markup kss-style">
+            <summary>
+                Markup: <code>modules/search.hbs</code>
+            </summary>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;row&quot;&gt;
+&lt;div class&#x3D;&quot;col-xs-12 col-sm-4 col-md-3&quot;&gt;
+    &lt;div class&#x3D;&quot;Tile Search&quot;&gt;
+        &lt;div class&#x3D;&quot;Tile__heading Search__heading&quot;&gt;
+            Search
+        &lt;/div&gt;
+        &lt;div class&#x3D;&quot;Tile__body Search__body&quot;&gt;
+            &lt;form method&#x3D;&quot;GET&quot; action&#x3D;&quot;&quot;&gt;
+                &lt;div class&#x3D;&quot;form-group&quot;&gt;
+                    &lt;label for&#x3D;&quot;&quot;&gt;City&lt;/label&gt;
+                    &lt;input type&#x3D;&quot;text&quot; class&#x3D;&quot;form-control&quot; name&#x3D;&quot;city&quot;&gt;
+                &lt;/div&gt;
+                &lt;div class&#x3D;&quot;form-group&quot;&gt;
+                    &lt;label for&#x3D;&quot;&quot;&gt;Age&lt;/label&gt;
+                    &lt;select name&#x3D;&quot;age&quot; class&#x3D;&quot;form-control&quot;&gt;
+                        &lt;option value&#x3D;&quot;18-25&quot;&gt;18-25&lt;/option&gt;
+                        &lt;option value&#x3D;&quot;25-30&quot;&gt;25-30&lt;/option&gt;
+                        &lt;option value&#x3D;&quot;30-35&quot;&gt;30-35&lt;/option&gt;
+                        &lt;option value&#x3D;&quot;35-40&quot;&gt;35-40&lt;/option&gt;
+                    &lt;/select&gt;
+                &lt;/div&gt;
+                &lt;div class&#x3D;&quot;text-right&quot;&gt;
+                    &lt;button type&#x3D;&quot;submit&quot; class&#x3D;&quot;Button Button--primary&quot;&gt;
+                        &lt;span class&#x3D;&quot;Button__content&quot;&gt;SEARCH&lt;/span&gt;
+                    &lt;/button&gt;
+                &lt;/div&gt;
+            &lt;/form&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
+&lt;/div&gt;</code></pre>
+          </details>
+
+        <div class="kss-source kss-style">
+          Source: <code>modules/search.scss</code>, line 1
+        </div>
+
+    </section>
     <section id="kssref-modules-shoutbox" class="kss-section kss-section--depth-2 ">
 
       <div class="kss-style">
         <h2 class="kss-title kss-title--level-2">
           <a class="kss-title__permalink" href="#kssref-modules-shoutbox">
             <span class="kss-title__ref">
-              5.2
+              5.3
               <span class="kss-title__permalink-hash">
                   #Modules.Shoutbox
               </span>
@@ -800,7 +964,7 @@
         <h2 class="kss-title kss-title--level-2">
           <a class="kss-title__permalink" href="#kssref-modules-user-account">
             <span class="kss-title__ref">
-              5.3
+              5.4
               <span class="kss-title__permalink-hash">
                   #Modules.User Account
               </span>
