--- a/resources/assets/styleguide/item-layout-footer.html
+++ b/resources/assets/styleguide/item-layout-footer.html
@@ -120,7 +120,7 @@
     <div class="container">
         <div class="col-xs-12 col-md-4">
             <div class="Footer__logo">
-                <img src="http://dating.app/img/site_logos/Altijdsex_LogoSmall_Pos@1x.jpg" alt="dev-Altijdsex.nl">
+                <img src="http://dating.app/img/site_logos/Datevrij_LogoSmall_Pos@1x.jpg" alt="dev-Datevrij.nl">
             </div>
         </div>
         <div class="col-xs-12 col-md-4">
@@ -144,7 +144,7 @@
     &lt;div class&#x3D;&quot;container&quot;&gt;
         &lt;div class&#x3D;&quot;col-xs-12 col-md-4&quot;&gt;
             &lt;div class&#x3D;&quot;Footer__logo&quot;&gt;
-                &lt;img src&#x3D;&quot;http://dating.app/img/site_logos/Altijdsex_LogoSmall_Pos@1x.jpg&quot; alt&#x3D;&quot;dev-Altijdsex.nl&quot;&gt;
+                &lt;img src&#x3D;&quot;http://dating.app/img/site_logos/Datevrij_LogoSmall_Pos@1x.jpg&quot; alt&#x3D;&quot;dev-Datevrij.nl&quot;&gt;
             &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class&#x3D;&quot;col-xs-12 col-md-4&quot;&gt;
