--- a/resources/assets/styleguide/section-layout.html
+++ b/resources/assets/styleguide/section-layout.html
@@ -176,7 +176,7 @@
     <div class="container">
         <div class="col-xs-12 col-md-4">
             <div class="Footer__logo">
-                <img src="http://dating.app/img/site_logos/Altijdsex_LogoSmall_Pos@1x.jpg" alt="dev-Altijdsex.nl">
+                <img src="http://dating.app/img/site_logos/Datevrij_LogoSmall_Pos@1x.jpg" alt="dev-Datevrij.nl">
             </div>
         </div>
         <div class="col-xs-12 col-md-4">
@@ -200,7 +200,7 @@
     &lt;div class&#x3D;&quot;container&quot;&gt;
         &lt;div class&#x3D;&quot;col-xs-12 col-md-4&quot;&gt;
             &lt;div class&#x3D;&quot;Footer__logo&quot;&gt;
-                &lt;img src&#x3D;&quot;http://dating.app/img/site_logos/Altijdsex_LogoSmall_Pos@1x.jpg&quot; alt&#x3D;&quot;dev-Altijdsex.nl&quot;&gt;
+                &lt;img src&#x3D;&quot;http://dating.app/img/site_logos/Datevrij_LogoSmall_Pos@1x.jpg&quot; alt&#x3D;&quot;dev-Datevrij.nl&quot;&gt;
             &lt;/div&gt;
         &lt;/div&gt;
         &lt;div class&#x3D;&quot;col-xs-12 col-md-4&quot;&gt;
@@ -323,7 +323,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="http://dating.app">
-                <img src="http://dating.app/img/site_logos/Altijdsex_LogoSmall_Pos@1x.png">
+                <img src="http://dating.app/img/site_logos/Datevrij_LogoSmall_Pos@1x.png">
             </a>
         </div>
 
@@ -390,7 +390,7 @@
                 &lt;span class&#x3D;&quot;icon-bar&quot;&gt;&lt;/span&gt;
             &lt;/button&gt;
             &lt;a class&#x3D;&quot;navbar-brand&quot; href&#x3D;&quot;http://dating.app&quot;&gt;
-                &lt;img src&#x3D;&quot;http://dating.app/img/site_logos/Altijdsex_LogoSmall_Pos@1x.png&quot;&gt;
+                &lt;img src&#x3D;&quot;http://dating.app/img/site_logos/Datevrij_LogoSmall_Pos@1x.png&quot;&gt;
             &lt;/a&gt;
         &lt;/div&gt;
 
